--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Flask Auth{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
 </head>
 <body>
-    <div class="container">
+    <div class="flex justify-center items-center w-screen h-screen bg-gray-300">
         {% block content %}{% endblock %}
     </div>
 </body>
