--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'auth_base.html' %}
+{% extends 'auth_layout.html' %}
 
 {% block title %}Register{% endblock %}
 
@@ -27,7 +27,7 @@
                     class="input-field">
             <button
                     type="submit"
-                    class="w-full bg-indigo-600 text-white font-semibold py-3 rounded-lg shadow-md hover:bg-indigo-700 transition duration-300"
+                    class="w-full btn-primary"
             >
                 Register
             </button>
