--- a/app/static/css/input.css
+++ b/app/static/css/input.css
@@ -15,3 +15,13 @@ nav a {
     focus:outline-none focus:ring-2 focus:ring-indigo-500
     focus:border-indigo-500;
 }
+
+/* First styling: Black background with white text and rounded borders */
+.btn-primary {
+    @apply px-5 py-2 bg-black hover:bg-gray-800 text-white rounded cursor-pointer;
+}
+
+/* Second styling: Black outline with black text and rounded borders */
+.btn-secondary {
+    @apply px-5 py-2 border border-black hover:bg-gray-200 text-black rounded cursor-pointer;
+}
