--- a/app/templates/dashboard_layout.html
+++ b/app/templates/dashboard_layout.html
@@ -9,8 +9,8 @@
     <!-- header bar -->
     <div class="flex flex-row items-center gap-2 m-4">
         <h3 class="text-2xl">Maintenance Tracker</h3>
-        <p class="inline-flex items-center h-[1.3rem] px-2 rounded-full bg-gray-200 text-xs font-semibold text-gray-700">
-            Manager
+        <p id="role-badge" class="inline-flex items-center h-[1.3rem] px-2 rounded-full bg-gray-200 text-xs font-semibold text-gray-700">
+            role
         </p>
 
         <div class="ml-auto flex flex-row items-center gap-4 h-8">
@@ -50,6 +50,15 @@
     {% block content %}{% endblock %}
 
     <script>
+        // set role badge on init from localStorage
+        document.addEventListener('DOMContentLoaded', function() {
+        const role = localStorage.getItem('role');
+        if (role) {
+            document.getElementById('role-badge').textContent = role;
+        }
+    });
+
+
         function addTicket() {
             document.getElementById('overlay').classList.remove('hidden');
             console.log("Add Ticket button clicked");
