--- a/app/templates/dashboard_manager.html
+++ b/app/templates/dashboard_manager.html
@@ -65,7 +65,7 @@
                     </button>
                     <div id="filter-priority-menu" class="absolute left-0 top-full mt-1 bg-white rounded-lg shadow-lg border border-gray-200 py-1 min-w-[150px] z-50 hidden">
                         <button class="w-full flex items-center gap-2 px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-priority="">
-                            <img src="{{ url_for('static', filename='images/all-priorities.svg') }}" class="w-4 h-4" alt="all priorities" />
+                            <img src="/static/images/all-priorities.svg" class="w-4 h-4" alt="all priorities" />
                             All Priorities
                         </button>
                         <button class="w-full flex items-center gap-2 px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-priority="3">
